# docassemble-CivilDocketingStatement

./: MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/CivilDocketingStatement/data/questions/: civil_docketing_statement.yml  civil_docketing_statement_word.yml
docassemble/CivilDocketingStatement/data/templates/: civil_docketing_statement.docx  civil_docketing_statement_next_steps.docx  civil_docketing_statement_word.docx  civil_docketing_statement_word_next_steps.docx
